--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ja">
 <head>
     <meta charset="UTF-8">
-    <title>マイプロジェクト</title>
+    <title>coyote</title>
     </head>
 <body>
 import React, { useState, useEffect, useRef, useMemo } from 'react';
