--- a/index.html
+++ b/index.html
@@ -61,7 +61,14 @@
         import { getAuth, signInAnonymously, signInWithCustomToken, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/11.6.1/firebase-auth.js";
         import { getFirestore, doc, setDoc, getDoc, updateDoc, onSnapshot, collection } from "https://www.gstatic.com/firebasejs/11.6.1/firebase-firestore.js";
 
-        const firebaseConfig = JSON.parse(__firebase_config);
+         const firebaseConfig = typeof __firebase_config !== 'undefined' 
+            ? JSON.parse(__firebase_config) 
+            : {
+                apiKey: "AIzaSyCq9rT0N5X7HoCb-OZlBNEtyEAcjuTTDEA",
+                authDomain: "hero-tablegames.firebaseapp.com",
+                projectId: "hero-tablegames",
+                storageBucket: "hero-tablegames.appspot.com"
+            };
         const app = initializeApp(firebaseConfig);
         const auth = getAuth(app);
         const db = getFirestore(app);
